@@ -25,8 +25,6 @@
 
 extern NSString *AZClientDestroyNotification;
 
-extern Time client_last_user_time;
-
 @interface AZClientManager: NSObject
 {
   NSMutableArray *clist;
