@@ -1,6 +1,7 @@
 2007-04-25  Yen-Ju Chen <yjchenx at gmail>
 
 	* Spot an error, though no side-effect is observed before the fix.
+	* Update to r5751 except client placement and startup notification.
 
 2007-04-24  Yen-Ju Chen <yjchenx at gmail>
 
